Add white and black leather cloaks as archetypes so that they can be created via formulae.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@20943 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
 
+Add white and black leather cloaks to be used with alchemy (tanning).
+Functionally equivalent to regular cloaks, except worth 2.5x.
+Also add updated cloak graphics for white and black cloaks to be styled more like the regular cloak.
+armour/cloak/cloak.arc
+armour/cloak/cloak_white.base.111.png
+armour/cloak/cloak_black.base.111.png
+Daniel Hawkins 2019-08-11
+
 Modify fishing pole graphic to clean up pixelation.
 skills/Skill_Tools/fishing_pole.base.111.png
 Rick Tanner 2019-05-30
