Revert change of cloak arches. Will use artifacts to denote white and black leather cloaks.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@20944 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,5 @@
 
-Add white and black leather cloaks to be used with alchemy (tanning).
-Functionally equivalent to regular cloaks, except worth 2.5x.
-Also add updated cloak graphics for white and black cloaks to be styled more like the regular cloak.
-armour/cloak/cloak.arc
+Add updated cloak graphics for white and black cloaks to be styled more like the regular cloak.
 armour/cloak/cloak_white.base.111.png
 armour/cloak/cloak_black.base.111.png
 Daniel Hawkins 2019-08-11
