Add kite shield as a shield archetype.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21039 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Add new shield type -- kite shield.
+These were generally intended for use on horseback, but saw significant use among foot
+soldiers as well. Historically, it replaced round shields, but was superceded by heater shields.
+Current armor value puts it between shields and round shields (at 6 armour).
+armour/shield/kite_shield.base.111.png
+armour/shield/kite_shield.arc
+armour/shield/kite_shield.face
+Daniel Hawkins 2019-11-30
 
 Add updated cloak graphics for white and black cloaks to be styled more like the regular cloak.
 armour/cloak/cloak_white.base.111.png
