Add kite shield to random treasure.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21040 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@ Current armor value puts it between shields and round shields (at 6 armour).
 armour/shield/kite_shield.base.111.png
 armour/shield/kite_shield.arc
 armour/shield/kite_shield.face
+treasures.trs
 Daniel Hawkins 2019-11-30
 
 Add updated cloak graphics for white and black cloaks to be styled more like the regular cloak.
