Minor pixel clean up and color tweaks to east west river bridge (river/bridge_37.base.111.png)
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21082 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Minor pixel clean up and color tweaks to east west river bridge
+river/bridge_37.base.111.png
+Rick Tanner 2020-01-13
+
 Add new shield type -- kite shield.
 These were generally intended for use on horseback, but saw significant use among foot
 soldiers as well. Historically, it replaced round shields, but was superceded by heater shields.
