Remove duplicate attributes
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21244 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Remove duplicate attributes.
+skills/Skill_Tools/mining_pick.arc
+Andreas Kirschbaum 2020-06-18
+
 Minor pixel clean up and color tweaks to east west river bridge
 river/bridge_37.base.111.png
 Rick Tanner 2020-01-13
