--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Add a new artifact: (weapon) of Souls. Requires server and maps (python scripts) updates to function.
+artifacts
+Daniel Hawkins 2020-08-07
+
 Remove duplicate attributes.
 skills/Skill_Tools/mining_pick.arc
 Andreas Kirschbaum 2020-06-18
