--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Add a new rune -- rune of sparking. It's spark shower in a rune.
+spell/Rune/rune_sparking.arc
+spell/Rune/rune_sparking.face
+spell/Rune/rune_spark.base.111.png
+Daniel Hawkins 2020-08-14
+
 Add a new artifact: (weapon) of Souls. Requires server and maps (python scripts) updates to function.
 artifacts
 Daniel Hawkins 2020-08-07
