Add background color behind the sign name on the Fantasy Weapon store (shop/store_weap_fant.base.x11.png)
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21306 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+
+Add background color behind the sign name on the Fantasy Weapon store.
+shop/store_weap_fant.base.x11.png
+Rick Tanner 2020-08-24
+
 Add a new rune -- rune of sparking. It's spark shower in a rune.
 spell/Rune/rune_sparking.arc
 spell/Rune/rune_sparking.face
