Add background color behind the sign name on the Fantasy Armour store (shop/store_armo_fant.base.x11.png)
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21307 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 
+Add background color behind the sign name on the Fantasy Armour store.
+shop/store_armo_fant.base.x11.png
+Rick Tanner 2020-08-24
+
 Add background color behind the sign name on the Fantasy Weapon store.
 shop/store_weap_fant.base.x11.png
 Rick Tanner 2020-08-24
