Prevent xp shenanigans with dip command by making the empty bottles, bags, glasses, etc identified. I'd been looking for a way to approach this, and Saiapatsu suggested approaching it this way.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21355 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Prevent xp shenanigans with dip command by making empty containers be identified.
+Did all of them, rather than just empty water bottles, for consistency and future-proofing.
+potion/emptybottles.arc
+Daniel Hawkins
+
 New spell -- Searing Weapon
 Appears in spellbooks only at this point.
 spell/Spellbook/pyro_book.trs
