Add artifact entry for silvered weapons. Intent is for these to be primarily crafted, but the can show up in random loot occasionally.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21483 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Add artifact entry for silvered weapons.
+Ensure it is restricted to stabbing and slicing weapons, since bludgeoning with
+silver doesn't seem like it would make much difference.
+artifacts
+Daniel Hawkins 2020-10-09
+
 Make the trident imagery less bright, using the W3C green rather than XPM green.
 This put the green hue at half the previous brightness.
 Move the bright green trident to the classic image set.
