Add crafting file. Add a folder to store crafting items outside misc
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21484 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Add crafting tool "file".
+Can be used to powderize metal bars (well, that's the plan anyway).
+crafting/Tools/file.arc
+crafting/Tools/file.base.111.png
+crafting/Tools/file.face
+crafting/README
+Daniel Hawkins 2020-10-09
+
 Add artifact entry for silvered weapons.
 Ensure it is restricted to stabbing and slicing weapons, since bludgeoning with
 silver doesn't seem like it would make much difference.
