Add recipes to craft weapons of silvered edge, and allow scythe as a silverable weapon.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21486 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+Add formulae for crafting weapons of Silvered Edge
+from the newly-added silver filings.
+Also added scythe to the list of valid weapons to silver.
+formulae
+artifacts
+Daniel Hawkins 2020-10-09
+
+Add silver filings as the first item creatable from
+the nee file crafting tool.
+formulae
+crafting/Materials/silver_filings.arc
+crafting/Materials/silver_filings.base.111.png
+crafting/Materials/silver_filings.face
+Daniel Hawkins 2020-10-09
+
 Add crafting tool "file".
 Can be used to powderize metal bars (well, that's the plan anyway).
 crafting/Tools/file.arc
