Allow file to randomly appear in loot.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21487 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Add the file as a random drop.
+treasures.trs
+Daniel Hawkins 2020-10-09
+
 Add formulae for crafting weapons of Silvered Edge
 from the newly-added silver filings.
 Also added scythe to the list of valid weapons to silver.
