Add aggravation to the list of spells in sorcery books.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21491 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,9 @@ The code to prevent charm monsters abuse
 from like 2010 appears to have caused the lvl 1
 aggravation horns to be essentially useless.
 Also, make the horns that spawn w/ aggravation have reasonable levels.
+Add the aggravation spell to the random spell list for sorcery.
 spell/MoodChange/spell_aggravation.arc
+spell/SpellBook/sorcerer_book.trs
 artifacts
 Daniel Hawkins 2020-10-10
 
