--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fix weirdness involving repeated races on dwarves.
+races
+Daniel Hawkins 2020-10-12
+
 Make aggravation a castable spell, and give it level-scaling
 The code to prevent charm monsters abuse
 from like 2010 appears to have caused the lvl 1
