Move leathers from misc/ to crafting/Materials/, where they are better organized.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21496 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Start to move crafting-specific materials out of misc and into crafting
+crafting/Materials/leathers.arc
+crafting/Materials/leather.face
+crafting/Materials/leather.base.111.png
+crafting/Materials/leather_black.base.111.png
+crafting/Materials/leather_white.base.111.png
+crafting/Materials/leather_strips.base.111.png
+
 Fix weirdness involving repeated races on dwarves.
 races
 Daniel Hawkins 2020-10-12
