Move crafting containers from misc/Container/ to crafting/Container/
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21498 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@ crafting/Tools/b_slicingknife.face
 crafting/Tools/slicingknife.arc
 crafting/Tools/slicingknife.base.111.png
 crafting/Tools/slicingknife.face
+crafting/Container/*
 Daniel Hawkins 2020-10-12
 
 Fix weirdness involving repeated races on dwarves.
