Add subtype 2 to guide to Close Combat This makes its subtype match that of the other guides.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21525 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Add subtype 2 to guide to Close Combat
+readable/guide/guide_melee.arc
+Daniel Hawkins 2020-10-28
+
 Add descriptions to all skill objects.
 This annotates each skill with flavour text and information about what the
 skill's passive, active, and crafting effects (if any) are.
