--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Add new player class -- ranger
+This is intended to allow better early-game focus on missile weapons.
+Also include special handling so the elf race image is also used as
+the elf ranger image.
+player/class/Warrior/ranger.*
+player/class/Warrior/ranger_class.face
+player/race/elf_player_class_ranger.*
+Daniel Hawkins 2020-11-10
+
 Add subtype 2 to guide to Close Combat
 readable/guide/guide_melee.arc
 Daniel Hawkins 2020-10-28
