--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+New image for composite bow. Move the old image to the classic tileset.
+weapon/bow/compositebow.base.111.png
+weapon/bow/compositebow.clsc.111.png
+Daniel Hawkins 2020-11-12
+
 Add new player class -- ranger
 This is intended to allow better early-game focus on missile weapons.
 Also include special handling so the elf race image is also used as
