Add guide to Ranged Combat so that the Ranger class starts out with a guide like other classes do.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21543 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Add guide to Ranged Combat so that the Ranger class can start with a guide.
+readable/guide/guide_ranged.arc
+player/class/Warrior/ranger.trs
+Daniel Hawkins 2020-11-13
+
 New image for composite bow. Move the old image to the classic tileset.
 weapon/bow/compositebow.base.111.png
 weapon/bow/compositebow.clsc.111.png
