Make invisible lighting not be pushed around by spells.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21554 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Make the light bulb invisible lighting arches have no_pick
+so that spells can't push them around.
+light/light_bulb.arc
+Daniel Hawkins 2020-11-21
+
 Add guide to Ranged Combat so that the Ranger class can start with a guide.
 readable/guide/guide_ranged.arc
 player/class/Warrior/ranger.trs
